<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:ignore="RtlSymmetry"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginBottom="16dp"
        android:id="@+id/userNameField"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/opt_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chk_opt1"
            android:text="@string/opt_1"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:onClick="updateCheckBox"
            android:paddingStart="24dp" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chk_opt2"
        android:text="@string/opt_2"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:paddingLeft="24dp"
        android:onClick="updateCheckBox"
        android:paddingStart="24dp"/>
    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/q_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <Button
            android:id="@+id/dec_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/button_lbl_dec"
            android:enabled="false"
            android:onClick="decrementOrder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q_value"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/black"
            android:id="@+id/quantity_text_view"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/button_lbl_inc"
            android:onClick="incrementOrder"/>
    </LinearLayout>
    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/p_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/black"
        android:id="@+id/order_summary_text_view"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_lbl"
        android:onClick="submitOrder"/>
</LinearLayout>
</ScrollView>